--- a/style.css
+++ b/style.css
@@ -92,9 +92,16 @@ h2 {
 }
 
 .image-wrapper img{
-  width: 103%;
+  width: 100%;
+  height: 100%;
   margin: -3px;
   filter: blur(3px);
+  object-fit: cover;
+}
+
+canvas{ 
+    width:100%; height:100%; 
+    position:absolute; top:0px; left:0px;
 }
 
 .row {
